@@ -1,3 +1,7 @@
+2001-03-06  Adam Fedor  <fedor@gnu.org>
+
+	* GNUmakefile.in: Remove extra '/' from GNUSTEP_..._ROOT paths.
+
 2001-03-01 Richard Frith-Macdonald <rfm@gnu.org>
 
 	* GNUstep.sh.in: Added check to ensure we don't add the same info
